docs: fix numerous IE11 layout issues
- most of them have to do with IE11's poor support
  for nested `layout="column"` elements
- remove some unnecessary wrapper `<div>` elements
- remove unused CSS
- fix CSS file with SCSS content
- simplify some CSS and remove some usages of `layout` and `layout-align`

--- a/src/components/checkbox/demoSyncing/style.css
+++ b/src/components/checkbox/demoSyncing/style.css
@@ -4,25 +4,16 @@
 legend {
   color: #3F51B5;
 }
-legend code {
-  color: #3F51B5;
-  font-weight: normal;
-}
 p {
   padding-left: 8px;
 }
-
 .info {
   padding-left: 13px;
 }
-
 div.standard {
-  padding: 8px;
-  padding-left: 15px;
+  padding: 8px 8px 8px 15px;
 }
-
 fieldset.standard {
   border-style: solid;
   border-width: 1px;
-  height: 100%;
 }
